tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint8_31_random_one_byte_less/serialized.ssz
jOахя#юЁЭp▓*	ЕuSЗ G"J|T╔ДBС